# deep-learning-app-template

./: README.md  README_zh.md  image_classifications.db  image_segmentations.db  pyproject.toml  requirements.txt  run_app.sh  start_backend.sh  start_frontend.sh
app/: database.py  frontend.py  image_classifications.db  main.py  model.py  model_handler.py  ui.py
app/infer_results/: result_20260203_110434_masks.json  result_20260203_110805_masks.json
dl_app_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
