[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-app-template"
version = "0.1.0"
description = "A deep learning app template with PySide6 desktop client for image segmentation"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "pyside6>=6.5.0",
    "sqlalchemy>=1.4.0",
    "pymysql>=1.0.0",
    "pillow>=8.0.0",
    "python-dotenv>=0.19.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
    "numpy>=1.19.0",
    "rich>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]